# kernel-playground

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  vercel.json
.github/workflows/: ci.yml
apps/web/: .env.example  next.config.mjs  package.json  tsconfig.json
apps/web/prisma/: schema.prisma
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/trpc/[trpc]/: route.ts
apps/web/src/app/playground/: layout.tsx  page.tsx
apps/web/src/app/signin/: page.tsx
apps/web/src/components/: CodeEditor.tsx  CountUp.tsx  GpuSelector.tsx  Header.tsx  Logo.tsx  UserMenu.tsx  posthog.tsx  theme.tsx
apps/web/src/server/: auth.ts  credit-ledger.ts  credits-config.ts  db.ts  runs.ts  store.ts  trpc.ts
apps/web/src/server/routers/: index.ts  kernel.ts  run.test.ts  run.ts
apps/web/src/trpc/: client.ts
docs/: BUILD_PLAN.md  FEATURES.md
docs/ci/: ci.yml.pending
services/execution/: README.md  pyproject.toml
services/execution/src/execution/: __init__.py  benchmark.py  checker.py  contracts.py  cuda_runner.py  modal_app.py  modal_provider.py  provider.py  triton_runner.py  wire.py
services/execution/src/execution/examples/: vector_add.cu  vector_add_triton.py
services/execution/src/execution/harness/: kp_main.cu
services/execution/tests/: test_benchmark.py  test_cuda_runner.py  test_provider.py  test_triton_runner.py  test_wire.py
