[project]
name = "kp-execution"
version = "0.0.0"
description = "GPU execution + benchmark backend for Kernel Playground (Modal)."
requires-python = ">=3.11"
# Runtime deps are intentionally minimal; the harness core is pure-stdlib so it is
# testable without a GPU. Heavy deps (modal, torch, triton) install only in the
# GPU image and are import-guarded.
dependencies = []

[project.optional-dependencies]
modal = ["modal>=0.64"]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.11"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
execution = ["harness/*.cu", "examples/*.cu"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

# `modal` installs only in the GPU image; it's import-guarded everywhere else.
[[tool.mypy.overrides]]
module = ["modal", "modal.*", "fastapi", "fastapi.*"]
ignore_missing_imports = true

# modal_app.py is Modal-decorator glue, verified by running on Modal rather than by
# types. Its strictness depends on whether `modal` is installed (Any vs real types), so
# relax the checks that flip between environments. The pure logic it calls stays strict.
[[tool.mypy.overrides]]
module = ["execution.modal_app"]
disallow_untyped_decorators = false
warn_unused_ignores = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
